tests/NormalTests/paczka1/small_fuzzy/73116544.err
Error in line 2: QBm A686 81,2
Error in line 12: DDy3 A720 41,2
Error in line 7: QBm S220 65,3
